--- a/index.html
+++ b/index.html
@@ -38,8 +38,24 @@
 </head>
 
 <body>
-    <div id="root" class="container">
+    <div id="root">
+        <header>
+            <div class="container">
 
+            </div>
+        </header>
+
+        <main>
+            <div class="container">
+                <div class="row row-cols-3">
+                    <div v-for="i in 6" :key="i" class="col mt-5">
+                        <div class="card">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 
