--- a/index.html
+++ b/index.html
@@ -40,17 +40,22 @@
 <body>
     <div id="root">
         <header>
-            <div class="container">
-
+            <div class="container d-flex align-items-center h-100">
+                <a href="#" class="m-0 p-0">
+                    <i class="fa-brands fa-spotify"></i>
+                </a>
             </div>
         </header>
 
-        <main>
+        <main class="pt-5">
             <div class="container">
-                <div class="row row-cols-3">
-                    <div v-for="i in 6" :key="i" class="col mt-5">
-                        <div class="card">
-
+                <div class="row row-cols-4">
+                    <div v-for="disc in discs" :key="disc.title" class="col mb-5">
+                        <div class="card align-items-center py-5">
+                            <img :src="disc.poster" :alt="disc.title" class="mb-3">
+                            <h5>{{ disc.title }}</h5>
+                            <p>{{ disc.author }}</p>
+                            <h6>{{ disc.year }}</h6>
                         </div>
                     </div>
                 </div>
